@@ -839,10 +839,13 @@ begin
             // remove the trailing ) - if there is any
             //GetWordOrStringConstant(inputstr, paramstr, remaining,[')'],true,false);
             GetWordOrStringConstant(inputstr, paramstr, remaining,[')'],true,true);
+            inputstr := paramstr;
+            paramstr := '';
+            GetOuterFunctionOrExp(inputstr, paramstr, remaining);
             // paramstr may now be: var, string or function
             // if the last is ) and there is no ( : so that is not a function
-            if (pos(')',paramstr) = length(paramstr)) and (pos('(',paramstr)=0) then
-              GetWordOrStringConstant(inputstr, paramstr, remaining,[')'],false,false);
+            //if (pos(')',paramstr) = length(paramstr)) and (pos('(',paramstr)=0) then
+            //  GetWordOrStringConstant(inputstr, paramstr, remaining,[')'],false,false);
           end
           else // this should be not the last parameter and we expect a ','
             GetWordOrStringConstant(inputstr, paramstr, remaining,[',']);
