@@ -16,6 +16,7 @@ opsi-winst/opsi-script (4.12.0.26) stable; urgency=low
   * osjson: jsonAsArrayToStringList: "[true]" now results to "true" ; fixes #3627
   * oswebservice: createSocket: log openssl version
   * osfunclin: getLinuxDistroType: read /etc/os-release  ; fixes #3651
+  * osparserhelper: GetOuterFunctionOrExp
   * OsDefinedFunction.parseCallParameter: handle functions as parameter ; fixes #3623
 
 -- Detlef Oertel <d.oertel@uib.de>  Tue, 28 Aug 2018:15:00:00 +0200
